--- a/css/base/base.css
+++ b/css/base/base.css
@@ -84,6 +84,10 @@ img {
 .text-center {
     text-align: center;
 }
+
+.margin-bottom {
+    margin-bottom: 5rem;
+}
 /* 
 .small-container {
     width: 900px;
