--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -13,7 +13,7 @@
 }
 
 .section-rose-img {
-    background-image: url("../../images/black-image-background.png");
+    background-image: url("../../images/black-image-background.jpg");
     background-size: cover;
     background-position: center;
 }
