--- a/css/modules/gallery.css
+++ b/css/modules/gallery.css
@@ -51,7 +51,7 @@ display: none;
 
 .gallery-container-wrapper {
     max-width: 120rem;
-    margin: 0 auto;
+    margin: 0 auto 5rem auto;
 }
 
 .gallery-btn{
