--- a/css/base/footer.css
+++ b/css/base/footer.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
     background-color: #fbd2c0;
     color: black;
     z-index: 5;
@@ -54,8 +54,83 @@ footer {
 
 .certification-item img {
     max-height: 60px;
+} */
+
+/* .copyright-item img {
+    max-height: 40px;
+} */
+
+
+.footer-top {
+    background-color: #f4e1cb;
 }
 
-.copyright-item img {
-    max-height: 40px;
+.social-container {
+    display: flex;
+    align-items: left;
+}
+
+.social-container img {
+    min-width: 40px;
+}
+
+.footer-top-inner {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.footer-top-content {
+    padding: 10rem 0;
+}
+
+.footer-top-image {
+    position: relative;
+    padding: 10rem 0 10rem 10rem;
+}
+
+.footer-top-image img {
+    position: relative;
+    z-index: 2;
+}
+
+.footer-top-image::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 52rem;
+    height: 100%;
+    background-color: #fefcf9;
+    z-index: 0;
+}
+
+.footer-middle {
+    color: #fff;
+    background-color: rgb(80, 63, 42);
+}
+
+.footer-middle-inner {
+    padding: 8.5rem 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.footer-middle-col a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-middle-col a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.footer-copy {
+    color: #fff;
+    background-color: rgb(39, 35, 31);
+}
+
+.footer-copy-inner {
+    padding: 5rem 0;
+    text-align: center;
 }
