--- a/jelinkova-react/src/scss/_base/_layout.scss
+++ b/jelinkova-react/src/scss/_base/_layout.scss
@@ -13,7 +13,7 @@
 }
 
 .section-rose-img {
-    //background-image: url("../../images/black-image-background.jpg");
+    background-image: url("../../images/black-image-background.jpg");
     background-size: cover;
     background-position: center;
 }
