--- a/jelinkova-react/src/scss/style.scss
+++ b/jelinkova-react/src/scss/style.scss
@@ -18,3 +18,5 @@
 @import "./_modules/_banner.scss";
 @import "./_modules/_reference.scss";
 @import "./_modules/_black-content.scss";
+@import "./_modules/_reference.scss";
+@import "./_modules/_crosslink.scss";
