Add massages content, few changes

--- a/jelinkova-react/src/scss/style.scss
+++ b/jelinkova-react/src/scss/style.scss
@@ -20,3 +20,4 @@
 @import "./_modules/_black-content.scss";
 @import "./_modules/_reference.scss";
 @import "./_modules/_crosslink.scss";
+@import "./_modules/_content-image.scss";
