--- a/jelinkova-react/src/scss/_base/_footer.scss
+++ b/jelinkova-react/src/scss/_base/_footer.scss
@@ -71,69 +71,61 @@ footer {
 .social-container {
     display: flex;
     align-items: left;
-}
-
-.social-container img {
-    min-width: 40px;
+    img {
+        min-width: 40px;
+    }
 }
 
 .footer-top-inner {
     display: grid;
     grid-template-columns: 1fr 2fr;
-}
-
-.footer-top-content {
-    padding: 10rem 0;
-}
-
-.footer-top-image {
-    position: relative;
-    padding: 10rem 0 10rem 10rem;
-}
-
-.footer-top-image img {
-    position: relative;
-    z-index: 2;
-}
-
-.footer-top-image::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 52rem;
-    height: 100%;
-    background-color: #fefcf9;
-    z-index: 0;
+    .footer-top-content {
+        padding: 10rem 0;
+    }
+    .footer-top-image {
+        position: relative;
+        padding: 10rem 0 10rem 10rem;
+        img {
+            position: relative;
+            z-index: 2;            
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 52rem;
+            height: 100%;
+            background-color: #fefcf9;
+            z-index: 0;
+        }
+    }
 }
 
 .footer-middle {
     color: #fff;
     background-color: rgb(80, 63, 42);
-}
-
-.footer-middle-inner {
-    padding: 8.5rem 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.footer-middle-col a {
-    color: white;
-    text-decoration: none;
-}
-
-.footer-middle-col a:hover {
-    color: white;
-    text-decoration: underline;
+    .footer-middle-inner {
+        padding: 2rem 5.5rem 5.5rem 5.5rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        .footer-middle-col a {
+            color: white;
+            text-decoration: none;
+            &:hover {
+                color: white;
+                text-decoration: underline;
+            }
+        }
+    }
 }
 
 .footer-copy {
     color: #fff;
     background-color: rgb(39, 35, 31);
+    .footer-copy-inner {
+        padding: 5rem 0;
+        text-align: center;
+    }
 }
 
-.footer-copy-inner {
-    padding: 5rem 0;
-    text-align: center;
-}
