Respo - topImage, benefit

--- a/jelinkova-react/src/scss/_base/_typography.scss
+++ b/jelinkova-react/src/scss/_base/_typography.scss
@@ -1,8 +1,21 @@
 h1, .h1 {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 700;
     margin: 8rem 0 6rem 0;
     line-height: 78px;
+    color: black;
+
+    @include media(md) {
+        font-size: 70px;
+        font-weight: 700;
+        margin: 8rem 0 6rem 0;
+        line-height: 78px;
+        color: white;
+    }
+    
+    @include media(lg) {
+        color: blue;
+    } 
 }
 
 h2, .h2 {
@@ -33,3 +46,4 @@ h4, .h4 {
     font-size: 22px;
     display: block;
 }
+
