--- a/jelinkova-react/src/scss/_base/_base.scss
+++ b/jelinkova-react/src/scss/_base/_base.scss
@@ -28,8 +28,12 @@ html {
 }
 
 body {
-    font-size: 18px;
+    font-size: 14px;
     font-family: 'Signika', sans-serif;
+
+    @include media(md) {
+        font-size: 18px;
+    }
 }
 
 @media only screen and (min-width: 320px) {
