--- a/jelinkova-react/src/scss/_base/_typography.scss
+++ b/jelinkova-react/src/scss/_base/_typography.scss
@@ -14,15 +14,19 @@ h1, .h1 {
     }
     
     @include media(lg) {
-        color: blue;
+        color: black;
     } 
 }
 
 h2, .h2 {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 700;
     margin: 6rem 0 6rem 0;
     line-height: 55px;
+
+    @include media(lg) {
+        font-size: 50px;
+    }
 }
 
 h3, .h3 {
