--- a/jelinkova-react/src/scss/_modules/_image-content.scss
+++ b/jelinkova-react/src/scss/_modules/_image-content.scss
@@ -1,11 +1,20 @@
 .image-content {
     position: relative;
     padding: 10rem 0;
+    margin: 0 0 31rem 0;
+
+    @include media(xs) {
+        margin: 0 0 28rem 0;
+    }
+
+    @include media(md) {
+        margin: 0;
+    }
 
     .image-content-inner {
-        max-height: 70rem;
-        // display: grid;
-        // grid-template-columns: 1fr 1fr;
+        max-height: 60rem;
+        display: grid;
+        grid-template-columns: 1fr;
 
         @include media(md) {
             min-height: 70rem;
@@ -16,16 +25,28 @@
         .image-content-photo {
             display: flex;
             align-items: center;
-            justify-content: flex-end;
-            margin: 0 100px 0 0;
+            justify-content: center;
+            margin: 0 30px 0 7rem;
 
             img {
                 position: relative;
                 z-index: 3;
-                width: 41rem;
-                max-height: 51rem;
-                min-height: 51rem;
+                width: 33rem;
+                max-height: 42rem;
+                min-height: 42rem;
                 object-fit: cover;
+            }
+
+            @include media(lg) {
+                display: flex;
+                justify-content: flex-end;
+                margin: 0 100px 0 0;
+
+                img {
+                    width: 41rem;
+                    max-height: 51rem;
+                    min-height: 51rem;
+                }
             }
 
             .image-shapes-wrapper {
@@ -35,12 +56,12 @@
                 height: max-content;
 
                 &::before {
-                    content: '';
+                    content: "";
                     position: absolute;
-                    top: 60px;
-                    left: 50px;
-                    height: calc(100% + 3rem);
-                    width: calc(100% + 5rem);
+                    top: 50px;
+                    left: 45px;
+                    height: calc(100% + 1rem);
+                    width: calc(100% + 1rem);
                     background-color: $main-color;
                     opacity: 0.5;
                     z-index: 1;
@@ -57,32 +78,67 @@
                     background-color: transparent;
                     z-index: 2;
                 }
+
+                @include media(lg) {
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        top: 60px;
+                        left: 50px;
+                        height: calc(100% + 3rem);
+                        width: calc(100% + 5rem);
+                        background-color: $main-color;
+                        opacity: 0.5;
+                        z-index: 1;
+                    }
+                }
             }
         }
 
         .image-content-text {
-            align-items: left;
-            padding: 10rem 5rem;
-            font-size: 24px;
+            padding: 10rem 1rem;
+            font-size: 20px;
             display: flex;
+            align-items: center;
             flex-direction: column;
             justify-content: center;
-            max-width: 75rem;
+            //max-width: 75rem;
             position: relative;
             color: black;
 
-            .image-content-text-title {
-                h2 {
-                    position: relative;
+            @include media(lg) {
+                align-items: left;
+                max-width: 75rem;
+                font-size: 24px;
+            }
 
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        top: calc(100% + 30px);
-                        left: 0;
-                        background-color: black;
-                        width: 55px;
-                        height: 3px;
+            @include media(md) {
+                display: flex;
+                align-items: flex-start;
+                margin: 0 0 0 5rem;
+            }
+
+            .image-content-text-title {
+                position: relative;
+
+                h2 {
+                    font-size: 30px;
+                }                
+
+                @include media(md) {
+                    h2 {
+                        position: relative;
+                        font-size: 40px;
+    
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            top: calc(100% + 30px);
+                            left: 0;
+                            background-color: black;
+                            width: 55px;
+                            height: 3px;
+                        }
                     }
                 }
             }
