--- a/jelinkova-react/src/scss/_modules/_top-image.scss
+++ b/jelinkova-react/src/scss/_modules/_top-image.scss
@@ -97,16 +97,16 @@
 
 
     // barvičky - později smazat
-    @include media(xs) {
-        color: red;
-    }
+    // @include media(xs) {
+    //     color: red;
+    // }
 
-    @include media(sm) {
-        color: pink;
-    }
+    // @include media(sm) {
+    //     color: pink;
+    // }
 
     @include media (md) {
-        color: rgb(255, 255, 255);
+        color: white;
     }
 
     @include media(lg) {
