--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -1,17 +1,45 @@
 header {
     position: fixed;
-    top: 0;
+    top: 3rem;
     left: 0;
     width: 100%;
     z-index: 1050;
-    background: white;
+    background: transparent;
+    pointer-events: none;
 
     .header {
         justify-content: space-between;
         display: flex;
+        align-items: center;
+        padding: 0 3rem;
+        pointer-events: all;
+        border-radius: 8px;
+        background-color: $base-white;
+        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.10);
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: calc(100% - 2rem);
+            z-index: 0;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            border: 1px solid $color-line;
+
+        }
+
+        @include media(lg) {
+            justify-content: space-between;
+            display: flex;
+        }
 
         .header-logo {
-            padding: 1.5rem 0;
+            padding: 1.5rem 1rem;
+            background-color: $base-white;
+            position: relative;
+            z-index: 1;
 
             a {
                 display: flex;
@@ -24,37 +52,135 @@ header {
         }
 
         .header-menu {
-            display: flex;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            display: none;
             z-index: 5;
             margin-left: auto;
+            align-items: center;
+            justify-content: right;
+
+            @include media($menu-break) {
+                position: static;
+                display: flex;
+            }
 
             ul {
                 display: flex;
-                margin: 0 10rem;
+                margin: 0 2rem 0 auto;
                 list-style-type: none;
                 align-items: center;
+                flex-direction: column;
+
+                @include media($menu-break) {
+                    flex-direction: row;
+                }
             }
 
             li {
                 display: inline;
-                margin: 0 1.8rem;
+                margin: 0 3rem;
 
                 a {
-                    color: black;
+                    color: $base-black;
                     text-decoration: none;
+                    background-color: $base-white;
                     padding: 1rem;
+                    font-weight: 300;
                     text-align: center;
-                    font-size: 20px;
+                    font-size: 22px;
+                    letter-spacing: 1px;
+                    transition: 300ms ease;
+                    &:hover, &:focus {
+                        color: $main-color;
+                    }
                 }
             }
         }
 
         .header-cta {
+            position: relative;
+            z-index: 1;
             display: flex;
             align-items: center;
+            background-color: $base-white;
+            padding: 0 1rem;
         }
     }
-    
+
+    &.open {
+        .header-menu {
+            display: flex;
+        }
+
+        .open-menu span {
+            width: 0;
+            background: transparent;
+
+            &::before {
+                transform: rotate(45deg);
+                background: $base-black;
+                width: 40px;
+                top: 0;
+            }
+
+            &::after {
+                transform: rotate(-45deg);
+                background: $base-black;
+                width: 40px;
+                top: 0;
+            }
+        }
+    }
+
+    .hamburger-menu {
+        width: 6rem;
+        height: 6rem;
+        position: relative;
+        display: block;
+        align-items: center;
+
+        @include media($menu-break) {
+            display: none;
+        }
+
+        span {
+            background: $base-black;
+            width: 5rem;
+            position: absolute;
+            left: 0.5rem;
+            height: 4px;
+            margin-top: -1px;
+            top: 50%;
+            border-radius: 2px;
+
+            &::after {
+                content: '';
+                background-color: #bb81bb;
+                height: 4px;
+                width: 18px;
+                border-radius: 2px;
+                position: absolute;
+                top: 1.6rem;
+            }
+
+            &::before {
+                content: '';
+                background-color: $base-black;
+                height: 4px;
+                border-radius: 2px;
+                width: 30px;
+                position: absolute;
+                top: -1.6rem;
+            }
+        }
+    }
+}
+
+.header-space {
+    //height: 8.9rem;
 }
 
 // .header-logo a img {
@@ -69,11 +195,3 @@ header {
 //     font-size: 20px;
 // }
 
-.header-menu li a:hover {
-    background-color: #fbd2c0;
-    color: black;
-}
-
-.header-space {
-    height: 10.9rem;
-}
