--- a/jelinkova-react/src/scss/_base/_layout.scss
+++ b/jelinkova-react/src/scss/_base/_layout.scss
@@ -5,6 +5,13 @@
     padding-left: 20px;
 }
 
+.header-container {
+    max-width: 180rem;
+    margin: 0 auto;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
 .medium-container {
     max-width: 120rem;
     margin: 0 auto;
@@ -17,3 +24,4 @@
     background-size: cover;
     background-position: center;
 }
+
