--- a/jelinkova-react/src/scss/_base/_typography.scss
+++ b/jelinkova-react/src/scss/_base/_typography.scss
@@ -1,32 +1,25 @@
 h1, .h1 {
     font-size: 60px;
-    font-weight: 700;
+    font-weight: 500;
     margin: 8rem 0 6rem 0;
     line-height: 78px;
-    color: black;
+    color: $base-text;
 
     @include media(md) {
         font-size: 70px;
         font-weight: 700;
         margin: 8rem 0 6rem 0;
         line-height: 78px;
-        color: white;
-    }
-    
-    @include media(lg) {
-        color: black;
+        color: $base-text;
     } 
 }
 
 h2, .h2 {
     font-size: 40px;
-    font-weight: 700;
+    font-weight: 500;
     margin: 6rem 0 6rem 0;
-    line-height: 55px;
-
-    @include media(lg) {
-        font-size: 50px;
-    }
+    line-height: 52px;
+    color: $main-color-dark;
 }
 
 h3, .h3 {
@@ -34,6 +27,7 @@ h3, .h3 {
     font-weight: 700;
     margin: 6rem 0;
     line-height: 48px;
+    color: $base-text;
 }
 
 h4, .h4 {
@@ -41,6 +35,7 @@ h4, .h4 {
     font-weight: 700;
     margin: 4rem 0;
     line-height: 40px;
+    color: $base-text;
 }
 
 
