--- a/jelinkova-react/src/scss/_modules/_banner.scss
+++ b/jelinkova-react/src/scss/_modules/_banner.scss
@@ -9,7 +9,9 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0);
+        background: rgba(255, 255, 255, 0.4);
+        background: linear-gradient(189deg, rgba(255,255,255,0.7) 46%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(21deg, rgba(255,255,255,0.7) 56%, rgba(255,255,255,0) 100%);
         z-index: 2;
 
         .banner-inner {
@@ -67,6 +69,7 @@
 .banner-cta {
     margin: 3.5rem 0 0 0;
 }
+
 
 // .banner.background-soft-gradient {
 //     background: linear-gradient(180deg, rgba(244,242,245,1) 20%, rgba(223,219,220,1) 100%);
