--- a/jelinkova-react/src/scss/_modules/_crosslink.scss
+++ b/jelinkova-react/src/scss/_modules/_crosslink.scss
@@ -1,58 +1,111 @@
-
 .crosslink-coffee-wrapper {
     position: relative;
     padding: 12rem 0;
+
     &::after {
         content: '';
         position: absolute;
         top: 0;
-        right: 0;
+        left: 0;
         width: 80%;
         height: 100%;
-        background-color: antiquewhite;
+        background-color: rgba(211, 176, 207, 1);
         z-index: 0;
     }
 }
 
-.crosslink-container {    
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.crosslink-container {
+    //display: grid;
+    //grid-template-columns: 1fr 1fr;
     position: relative;
-    z-index: 1;
+    z-index: 2;
+    overflow: hidden;
+    border-radius: 8px;
+    margin-top: -25rem;
+
+    @include media(md) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        position: relative;
+        z-index: 2;
+        margin-top: -25rem;
+    }
 }
 
 .crosslink-item {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    //display: grid;
+    //grid-template-columns: 1fr 1fr;
+
+    @include media(md) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
     .crosslink-item-content {
-        background-color: white;
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(248, 248, 248);
         padding: 5rem 8rem 5rem 4rem;
+
         .crosslink-item-content-text {
-            font-size: 18px;
-            line-height: 4rem;
+            font-size: 20px;
+            line-height: 3.2rem;
         }
+
         .crosslink-item-content-title {
             font-size: 26px;
             font-weight: 700;
             position: relative;
-            margin-bottom: 40px;
-            text-transform: uppercase;
-            &::after {
-                content: "";
-                position: absolute;
-                top: calc(100% + 18.5px);
-                left: 6%;
-                transform: translateX(-50%);
-                width: 35px;
-                height: 3px;
-                background: black;
-            }
+            margin-bottom: 3rem;
+
+            // &::after {
+            //     content: "";
+            //     position: absolute;
+            //     top: calc(100% + 18.5px);
+            //     left: 6%;
+            //     transform: translateX(-50%);
+            //     width: 35px;
+            //     height: 3px;
+            //     background: black;
+            // }
         }
+
+        .crosslink-item-content-cta {
+            margin-top: auto;
+            padding-top: 4rem;
+        }
+    }
+
+    .crosslink-item-photo {
+        position: relative;
+        min-height: 40rem;
+
+        img {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            min-height: 100%;
+            max-height: 100%;
+            object-fit: cover;
+            z-index: 1;
+        }
+
+        // &::before {
+        //     content: '';
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     background-color: rgba(211,176,207,.7);
+        //     z-index: 2;
+        // }
     }
 }
 
 .crosslink-item.reverse-item .crosslink-item-photo {
-    order: -1;       
+    order: -1;
 }
 
 .crosslink-item-content.background-black .crosslink-item-content-title::after {
@@ -66,18 +119,4 @@
 
 .crosslink-item-content.background-white {
     background-color: white;
-}
-
-.crosslink-item-photo {
-    position: relative;
-    min-height: 48rem;
-    img {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        min-height: 100%;
-        max-height: 100%;
-        object-fit: cover;
-    }
 }
