--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -46,7 +46,8 @@ header {
                 height: max-content;
 
                 img {
-                    max-height: 8rem;
+                    max-height: 6.5rem;
+                    min-height: 6.5rem;
                 }
             }
         }
