--- a/jelinkova-react/src/scss/_base/_variables.scss
+++ b/jelinkova-react/src/scss/_base/_variables.scss
@@ -9,3 +9,6 @@ $base-white: #fff;
 $menu-break: 'lg';
 
 // barvy loga: #aa9071 + #ede7e1
+
+$font-family: 'Montserrat Alternates', sans-serif;
+$font-family-title: 'Kaushan Script', cursive;
