--- a/jelinkova-react/src/scss/_base/_base.scss
+++ b/jelinkova-react/src/scss/_base/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -29,10 +29,11 @@ html {
 
 body {
     font-size: 16px;
-    font-family: 'Signika', sans-serif;
+    font-family: $font-family;
     color: $base-text;
     @include media(md) {
         font-size: 18px;
+        line-height: 28px;
     }
 }
 
