--- a/jelinkova-react/src/scss/_components/_buttons.scss
+++ b/jelinkova-react/src/scss/_components/_buttons.scss
@@ -1,7 +1,8 @@
 .btn {
     padding: 1.2rem 3rem;
     //text-transform: uppercase;
-    font-size: 20px;
+    letter-spacing: 1px;
+    font-size: 18px;
     text-decoration: none;
     font-weight: 500;
     min-width: 15rem;
