--- a/jelinkova-react/src/scss/_modules/_top-image.scss
+++ b/jelinkova-react/src/scss/_modules/_top-image.scss
@@ -65,11 +65,15 @@
             .top-image-content-inner {
                 margin-bottom: 5rem;
                 & h1 {
-                    margin: 6rem 0;
+                    margin: 4rem 0;
+                }
+
+                .perex {
+                    max-width: clamp(400px, 60rem, 60rem);
                 }
     
                 .top-image-cta {
-                    margin: 3.5rem 0 0 0;
+                    margin: 5.5rem 0 0 0;
                 }
     
                 & .marker {
