Add sub-menu, base

--- a/jelinkova-react/src/scss/_base/_variables.scss
+++ b/jelinkova-react/src/scss/_base/_variables.scss
@@ -1,14 +1,17 @@
 //$main-color: #fbd2c0;
 $main-color: #d3b0cf;
 $main-color-dark: #bc81b6;
-$minor-color: #f2b39a;
+$main-color-hover: #9f6599;
+//$minor-color: #f2b39a;
 $base-text: #323232;
 $color-line: #d3b0cf40;
 $base-black: #000;
 $base-white: #fff;
 $menu-break: 'lg';
 
-// barvy loga: #aa9071 + #ede7e1
+// barvy loga: #aa9071 + #ede7e1 #d3b0cf
 
 $font-family: 'Montserrat Alternates', sans-serif;
 $font-family-title: 'Kaushan Script', cursive;
+
+$border: 8px;
