--- a/jelinkova-react/src/scss/_base/_footer.scss
+++ b/jelinkova-react/src/scss/_base/_footer.scss
@@ -65,14 +65,25 @@ footer {
 }
 
 .footer-top {
-    background-color: #f4e1cb;
+    background-color: $main-color;
+
+    .footer-title {
+        color: $base-text;
+        margin: 6rem 0 3.5rem;
+        &:first-child {
+            margin-top: 0;
+        }
+    }
 }
 
 .social-container {
     display: flex;
-    align-items: left;
+    gap: 2rem;
+    flex-wrap: wrap;
+    align-items: flex-start;
     img {
-        min-width: 40px;
+        min-height: 50px;
+        max-height: 50px;
     }
 }
 
@@ -80,14 +91,15 @@ footer {
     display: grid;
     grid-template-columns: 1fr 2fr;
     .footer-top-content {
-        padding: 10rem 0;
+        padding: 10rem 10rem 10rem 0;
     }
     .footer-top-image {
         position: relative;
         padding: 10rem 0 10rem 10rem;
         img {
             position: relative;
-            z-index: 2;            
+            z-index: 2;  
+            border-radius: 8px;          
         }
         &::after {
             content: '';
@@ -104,25 +116,51 @@ footer {
 
 .footer-middle {
     color: #fff;
-    background-color: rgb(80, 63, 42);
+    background-color: $main-color-dark;
     .footer-middle-inner {
-        padding: 2rem 5.5rem 5.5rem 5.5rem;
+        padding: 5rem;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        .footer-middle-col a {
-            color: white;
-            text-decoration: none;
-            &:hover {
-                color: white;
-                text-decoration: underline;
+        grid-template-columns: 1fr 1fr 2fr;
+        .footer-middle-col {
+            h3 {
+                margin: 0 0 3rem 0;
             }
+            ul {
+                list-style: none;
+                padding: 0;
+                padding: 0;
+                li {
+                    padding: 0;
+                    margin: 0 0 1rem 0;
+                    &::before {
+                        display: none;
+                    }
+                    a {
+                        text-decoration: none;
+                        color: $base-text;
+                     }
+                }
+            }
+            
         }
+    }
+}
+
+.footer-map {
+    margin: 3rem 0 0 0;
+    iframe {
+        width: 100%;
+    height: 30rem;
+    overflow: hidden;
+    border-radius: 8px;
+    border: none;
+    outline: none;
     }
 }
 
 .footer-copy {
     color: #fff;
-    background-color: rgb(39, 35, 31);
+    background-color: $base-text;
     .footer-copy-inner {
         padding: 5rem 0;
         text-align: center;
