--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -10,12 +10,11 @@ header {
     .header {
         justify-content: space-between;
         display: flex;
-        align-items: center;
-        padding: 0 3rem;
+        padding: 0 4rem;
         pointer-events: all;
         border-radius: 8px;
         background-color: $base-white;
-        box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.10);
+        box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
         position: relative;
 
         &::after {
@@ -60,7 +59,6 @@ header {
             display: none;
             z-index: 5;
             margin-left: auto;
-            align-items: center;
             justify-content: right;
 
             @include media($menu-break) {
@@ -68,34 +66,54 @@ header {
                 display: flex;
             }
 
-            ul {
+            > ul {
                 display: flex;
                 margin: 0 2rem 0 auto;
                 list-style-type: none;
                 align-items: center;
                 flex-direction: column;
-
                 @include media($menu-break) {
                     flex-direction: row;
                 }
-            }
+                > li {
+                    display: flex;
+                    height: 100%;
+                    margin: 0 3rem;
+                    position: relative;
+    
+                    > a {
+                        display: flex;
+                        align-items: center;
+                        color: $base-black;
+                        text-decoration: none;
+                        background-color: $base-white;
+                        padding: 1rem;
+                        font-weight: 400;
+                        text-align: center;
+                        font-size: 20px;
+                        letter-spacing: 1px;
+                        transition: 300ms ease;
+                        &:hover, &:focus {
+                            color: $main-color-dark;
+                        }
+                    }
 
-            li {
-                display: inline;
-                margin: 0 3rem;
+                    > ul {
+                        display: none;
+                        position: absolute;
+                        top: 100%;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        background-color: $base-white;
+                        min-width: 30rem;
+                    }
 
-                a {
-                    color: $base-black;
-                    text-decoration: none;
-                    background-color: $base-white;
-                    padding: 1rem;
-                    font-weight: 400;
-                    text-align: center;
-                    font-size: 20px;
-                    letter-spacing: 1px;
-                    transition: 300ms ease;
-                    &:hover, &:focus {
-                        color: $main-color-dark;
+                    &:hover {
+                        > ul {
+                            @include media($menu-break) {
+                                display: block;
+                            }
+                        }
                     }
                 }
             }
@@ -104,10 +122,13 @@ header {
         .header-cta {
             position: relative;
             z-index: 1;
-            display: flex;
+            display: none;
             align-items: center;
             background-color: $base-white;
             padding: 0 1rem;
+            @include media($menu-break) {
+                display: flex;
+            }
         }
     }
 
