--- a/jelinkova-react/src/scss/_modules/_crosslink.scss
+++ b/jelinkova-react/src/scss/_modules/_crosslink.scss
@@ -9,7 +9,8 @@
         left: 0;
         width: 80%;
         height: 100%;
-        background-color: rgba(211, 176, 207, 1);
+        background-color: $main-color;
+        border-radius: 0 0 8px 0;
         z-index: 0;
     }
 }
@@ -23,7 +24,7 @@
     border-radius: 8px;
     margin-top: -25rem;
 
-    @include media(md) {
+    @include media(xl) {
         display: grid;
         grid-template-columns: 1fr 1fr;
         position: relative;
@@ -36,7 +37,7 @@
     //display: grid;
     //grid-template-columns: 1fr 1fr;
 
-    @include media(md) {
+    @include media(xs) {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
@@ -108,14 +109,14 @@
 }
 
 .crosslink-item-content.background-black .crosslink-item-content-title::after {
-    background: white;
+    background: $base-white;
 }
 
 .crosslink-item-content.background-black {
-    background-color: black;
-    color: white;
+    background-color: $base-black;
+    color: $base-white;
 }
 
 .crosslink-item-content.background-white {
-    background-color: white;
+    background-color: $base-white;
 }
