--- a/jelinkova-react/src/scss/_modules/_image-content.scss
+++ b/jelinkova-react/src/scss/_modules/_image-content.scss
@@ -87,6 +87,7 @@
                     height: calc(100% + 60px);
                     width: 100%;
                     border: 5px solid $main-color;
+                    border-radius: 8px;
                     background-color: transparent;
                     z-index: 2;
                 }
@@ -98,9 +99,8 @@
             align-items: center;
             flex-direction: column;
             justify-content: center;
-            //max-width: 75rem;
             position: relative;
-            color: black;
+            color: $base-black;
             text-align: center;
             font-weight: 300;
 
@@ -124,15 +124,15 @@
             .image-content-link {
                 margin: 3.5rem 0 0 0;
 
-                a {
-                    color: $main-color;
-                    text-decoration: none;
+                // a {
+                //     color: $main-color;
+                //     text-decoration: none;
 
-                    &::hover {
-                        color: #fdb393;
-                        text-decoration: none;
-                    }
-                }
+                //     &::hover {
+                //         color: #fdb393;
+                //         text-decoration: none;
+                //     }
+                // }
             }
         }
     }
