Add massage cards

--- a/jelinkova-react/src/scss/style.scss
+++ b/jelinkova-react/src/scss/style.scss
@@ -24,3 +24,6 @@
 @import "./_modules/_reference.scss";
 @import "./_modules/_crosslink.scss";
 @import "./_modules/_content-image.scss";
+
+
+@import "./_massages/_massages.scss";
