--- a/jelinkova-react/src/scss/_base/_layout.scss
+++ b/jelinkova-react/src/scss/_base/_layout.scss
@@ -19,9 +19,6 @@
     padding-left: 20px;
 }
 
-.section-rose-img {
-    background-image: url("../../images/black-image-background.jpg");
-    background-size: cover;
-    background-position: center;
+.block {
+    padding: 20rem 0 0 0;
 }
-
