--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -14,7 +14,7 @@ header {
         pointer-events: all;
         border-radius: 8px;
         background-color: $base-white;
-        box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
+        box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.05);
         position: relative;
 
         &::after {
@@ -45,7 +45,7 @@ header {
                 height: max-content;
 
                 img {
-                    max-height:8rem;
+                    max-height: 8rem;
                     min-height: 8rem;
                 }
             }
@@ -66,22 +66,24 @@ header {
                 display: flex;
             }
 
-            > ul {
+            >ul {
                 display: flex;
                 margin: 0 2rem 0 auto;
                 list-style-type: none;
                 align-items: center;
                 flex-direction: column;
+
                 @include media($menu-break) {
                     flex-direction: row;
                 }
-                > li {
+
+                >li {
                     display: flex;
                     height: 100%;
                     margin: 0 3rem;
                     position: relative;
-    
-                    > a {
+
+                    >a {
                         display: flex;
                         align-items: center;
                         color: $base-black;
@@ -93,23 +95,58 @@ header {
                         font-size: 20px;
                         letter-spacing: 1px;
                         transition: 300ms ease;
-                        &:hover, &:focus {
+
+                        &:hover,
+                        &:focus {
                             color: $main-color-dark;
                         }
                     }
 
-                    > ul {
-                        display: none;
+                    >ul {
+                        display: block;
                         position: absolute;
                         top: 100%;
                         left: 50%;
                         transform: translateX(-50%);
                         background-color: $base-white;
                         min-width: 30rem;
+                        border-radius: 0 0 8px 8px;
+                        box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.05);
+
+
+                        > li {
+                            //background-color: #bb81bb;
+                            list-style: none;
+                            text-align: center;
+
+                            &:first-child {
+                                >a {
+                                    padding-top: 3rem;
+                                }
+                            }
+
+                            &:last-child {
+                                >a {
+                                    border-radius: 0 0 8px 8px;
+                                    padding-bottom: 3rem;
+                                }
+                            }
+
+                            >a {
+                                display: block;
+                                padding: 2rem;
+                                text-decoration: none;
+                                color: $base-black;
+
+                                &:hover {
+                                    color: $main-color-hover;
+                                }
+                            }
+                        }
                     }
 
                     &:hover {
-                        > ul {
+                        >ul {
                             @include media($menu-break) {
                                 display: block;
                             }
@@ -126,6 +163,7 @@ header {
             align-items: center;
             background-color: $base-white;
             padding: 0 1rem;
+
             @include media($menu-break) {
                 display: flex;
             }
@@ -158,8 +196,7 @@ header {
     }
 
     &.scrolled {
-        .header-logo {
-        }
+        .header-logo {}
     }
 
     .hamburger-menu {
@@ -221,4 +258,3 @@ header {
 //     text-align: center;
 //     font-size: 20px;
 // }
-
