--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -224,9 +224,9 @@ header {
         }
     }
 
-    &.scrolled {
-        .header-logo {}
-    }
+    // &.scrolled {
+    //     .header-logo {}
+    // }
 
     .hamburger-menu {
         width: 6rem;
@@ -272,9 +272,9 @@ header {
     }
 }
 
-.header-space {
-    //height: 8.9rem;
-}
+// .header-space {
+//     height: 8.9rem;
+// }
 
 // .header-logo a img {
 //     max-height: 8rem;
