--- a/jelinkova-react/src/scss/style.scss
+++ b/jelinkova-react/src/scss/style.scss
@@ -13,6 +13,7 @@
 
 // components
 @import "./_components/_buttons.scss";
+@import "./_components/_pricetable.scss";
 
 // modules
 @import "./_modules/_top-image.scss";
