--- a/jelinkova-react/src/scss/_base/_header.scss
+++ b/jelinkova-react/src/scss/_base/_header.scss
@@ -106,19 +106,16 @@ header {
                     }
 
                     >ul {
-                        display: flex;
                         position: absolute;
-                        justify-content: space-around;
-                        padding: 2rem 5rem;
+                        padding: 2rem 4rem;
                         flex-wrap: wrap;
                         top: 100%;
-                        right: 0;
-                        /* left: 50%; */
-                        transform: translateX(3rem) translateY(-24px);
+                        left: 50%;
+                        transform: translateX(-50%) translateY(-24px);
                         background-color: $base-white;
-                        min-width: 78rem;
+                        min-width: 38rem;
                         border-radius: 0 0 8px 8px;
-                        box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.05);
+                        box-shadow: 0 16px 20px 0 rgba(0, 0, 0, 0.05);
                         opacity: 0;
                         visibility: hidden;
                         transition: 300ms ease-in-out;
@@ -144,8 +141,9 @@ header {
 
                             >a {
                                 display: block;
-                                padding: 2rem;
+                                padding: 1.5rem;
                                 text-decoration: none;
+                                font-size: clamp(15px, 1.7rem, 1.7rem);
                                 color: $base-black;
 
                                 &:hover {
@@ -161,8 +159,8 @@ header {
                         }
                         >ul {
                             @include media($menu-break) {
-                                display: flex;
-                                transform: translateX(3rem) translateY(0);
+                                display: block;
+                                transform: translateX(-50%) translateY(0);
                                 visibility: visible;
                                 opacity: 1;
                             }
@@ -190,6 +188,40 @@ header {
 
             @include media($menu-break) {
                 display: flex;
+            }
+
+            .btn-primary {
+                padding-right: 3rem;
+                min-width: unset;
+                border-radius: 5px 0 0 5px;
+            }
+
+            .btn-phone {
+                min-width: unset;
+                border-radius: 0 5px 5px 0;
+                //margin-left: -2rem;
+                width: 54px;
+                height: 54px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: $main-color-hover;
+                position: relative;
+                z-index: 2;
+                transition: 200ms ease;
+                svg {
+                    height: 24px;
+                    min-width: 24px;
+                    fill: $base-white;
+                    transition: 200ms ease;
+                }
+                &:hover {
+                    transform: scale(1.2);
+                    border-radius: 5px;
+                    svg {
+                        transform: scale(.85);
+                    }
+                }
             }
         }
 
