--- a/jelinkova-react/src/scss/_components/_buttons.scss
+++ b/jelinkova-react/src/scss/_components/_buttons.scss
@@ -14,12 +14,49 @@
 }
 
 .btn-primary {
+    padding: 1.3rem 3rem;
+    position: relative;
+    overflow: hidden;
     background-color: $main-color-dark;
     color: $base-white;
+    border: none;
     border-color: $main-color-dark;
+
+    &::after {
+        content: '';
+        height: 8em;
+        width: 8em;
+        position: absolute;
+        bottom: -4em;
+        right: 100%;
+        border-radius: 100%;
+        background-color: rgba(0, 0, 0, 0.04);
+        z-index: 0;
+        transition: 200ms ease-in-out;
+    }
+
+    &::before {
+        content: '';
+        height: 8em;
+        width: 8em;
+        position: absolute;
+        top: -4em;
+        left: 100%;
+        border-radius: 100%;
+        background-color: rgba(0, 0, 0, 0.04);
+        z-index: 0;
+        transition: 200ms ease-in-out;
+    }
+
     &:hover, &:focus {
-        background-color: $main-color-hover;
-        border-color: $main-color-hover;
+        // background-color: $main-color-hover;
+        // border-color: $main-color-hover;
+        &::after {
+            transform: translate3d(30%, 0, 0);
+        }
+        &::before {
+            transform: translate3d(-30%, 0, 0);
+        }
     }
 }
 
@@ -33,3 +70,5 @@
         border-color: $main-color-hover;
     }
 }
+
+
