--- a/jelinkova-react/src/scss/_modules/_crosslink.scss
+++ b/jelinkova-react/src/scss/_modules/_crosslink.scss
@@ -45,7 +45,7 @@
     .crosslink-item-content {
         display: flex;
         flex-direction: column;
-        background-color: rgb(248, 248, 248);
+        background-color: #fefcf9;
         padding: 5rem 8rem 5rem 4rem;
 
         .crosslink-item-content-text {
