--- a/jelinkova-react/src/scss/_modules/_image-content.scss
+++ b/jelinkova-react/src/scss/_modules/_image-content.scss
@@ -1,15 +1,6 @@
 .image-content {
     position: relative;
-    padding: 10rem 0;
-    margin: 0;
-
-    @include media(xs) {
-        margin: 0 0 28rem 0;
-    }
-
-    @include media(md) {
-        margin: 0;
-    }
+    margin: 10rem 0;
 
     .image-content-inner {
         display: grid;
@@ -86,7 +77,7 @@
                     right: 30px;
                     height: calc(100% + 60px);
                     width: 100%;
-                    border: 5px solid $main-color;
+                    border: 2px solid $main-color;
                     border-radius: 8px;
                     background-color: transparent;
                     z-index: 2;
